Fixed the grammer, stretching f image and removed the certificate link

--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,9 @@ background-color: #0A0F22;
     text-decoration-thickness: 0.2rem;
 }
 
+
+  
+
 #myBtn{
     display: none;
     position: fixed;
@@ -145,7 +148,7 @@ background-color: #0A0F22;
     color: white; 
 }
 
-.aboutContainer{
+.aboutContainer {
     position: relative;
     top: 400px;
     display: flex;
@@ -153,14 +156,22 @@ background-color: #0A0F22;
     align-items: center;
     justify-content: center;
     column-gap: 30rem;
+    flex-wrap: wrap;
+    padding: 1rem;
 }
 
-.aboutContainer img{
+.aboutContainer img {
     border-radius: 100%;
     height: 18rem;
     width: 18rem;
+    max-width: 100%; 
+    object-fit: cover;
     border: 5px solid #56B2BB;
+    margin-bottom: 5rem;
 }
+
+
+
 
 .aboutContainer h1{
     color: #FFFFFF;
